--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 hello
-<a>https://github.com/ljy4337/ljy4337.github.io</a>
+JinYoung's Github Page!!
+<a https://github.com/ljy4337/ljy4337.github.io/>
