--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 hello
 JinYoung's Github Page!!
-<a https://github.com/ljy4337/ljy4337.github.io/>
+<a href = "https://github.com/ljy4337/ljy4337.github.io" >
