--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <body>
-hello
-JinYoung's Github Page!!
-<a href = "https://github.com/ljy4337/ljy4337.github.io" >
-  </body>
- </html>
+  <h2>hello</h2>
+  <h2>JinYoung's Github Page!!</h2>
+
+<a href="https://github.com/ljy4337/ljy4337.github.io">
+</body>
+</html>
