--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <body>
   <h2>hello</h2>
   <h2>JinYoung's Github Page!!</h2>
-
-<a href="https://github.com/ljy4337/ljy4337.github.io">
+  <a href="https://github.com/ljy4337/ljy4337.github.io">click!!(Source)</a>
 </body>
 </html>
